--- a/index.html
+++ b/index.html
@@ -179,15 +179,15 @@
     depth_1.slideTo(cate_index(start_page_id())[1]);
   }
 
-  function cnt_load(page_id) {
-    var cate_num = cate_index(page_id),
+  function cnt_load(clk_id) {
+    var cate_num = cate_index(clk_id),
         prev_id = Object.keys(user_cate)[cate_num[0]],
         active_id = Object.keys(user_cate)[cate_num[1]],
         next_id = Object.keys(user_cate)[cate_num[2]];
 
-        $body.attr('id', 'pid_'+ page_id);
+        $body.attr('id', 'pid_'+ active_id);
 
-        $cnt_list.eq(1).attr('data-id',page_id).load("./cnt/"+ page_id + ".html");
+        $cnt_list.eq(1).attr('data-id',page_id).load("./cnt/"+ active_id + ".html");
         $cnt_list.eq(0).attr('data-id',prev_id).load("./cnt/"+ prev_id + ".html");
         $cnt_list.eq(2).attr('data-id',next_id).load("./cnt/"+ next_id + ".html");
   }
@@ -198,9 +198,9 @@
       $("#mypage").toggleClass('on');
     });
     $("#nav_1 .swiper-slide").click(function() {
-      var page_id = $(this).attr('id');
+      var clk_id = $(this).attr('id');
 
-      cnt_load([page_id]);
+      cnt_load([clk_id]);
       depth_1.slideTo(chk_append_index(page_id,0)[1]);
     });
     cate_load();
