--- a/cnt/news.html
+++ b/cnt/news.html
@@ -1,3 +1,30 @@
 <article page_id="news">
+  <div id="nav_2">
+    <nav class="depth_2 swiper-container border-box-all">
+      <ul class="swiper-wrapper">
+        <li class="swiper-slide"><a class="backdrop_st01" href="#game" data-id="game">게임</a></li>
+        <li class="swiper-slide"><a class="backdrop_st01" href="#game" data-id="game">게임</a></li>
+        <li class="swiper-slide"><a class="backdrop_st01" href="#game" data-id="game">게임</a></li>
+        <li class="swiper-slide"><a class="backdrop_st01" href="#game" data-id="game">게임</a></li>
+        <li class="swiper-slide"><a class="backdrop_st01" href="#game" data-id="game">게임</a></li>
+        <li class="swiper-slide"><a class="backdrop_st01" href="#game" data-id="game">게임</a></li>
+        <li class="swiper-slide"><a class="backdrop_st01" href="#game" data-id="game">게임</a></li>
+      </ul>
+    </nav>
+    <a href="" class="news_tag_plus">
+      <span class="font_zero">관심 태그 추가하기</span>
+    </a>
+  </div>
   <div>news</div>
 </article>
+<script type="text/javascript">
+  // 서브메뉴 슬라이더
+      var depth_2 = new Swiper('.depth_2', {
+        slidesPerView: 'auto',
+        spaceBetween: 16,
+        centeredSlides: false,
+        initialSlide: 0,
+        freeMode: true
+      });
+  // 서브메뉴 슬라이더 끝
+</script>
