--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ $(function() {
     var clk_id = $(this).attr('id');
     console.log(clk_id);
 
-    cnt_load([clk_id]);
+    cnt_load(clk_id);
     depth_1.slideTo(chk_append_index(page_id,0)[1]);
   });
   cate_load();
