--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
     depth_1.slideTo(cate_index(start_page_id())[1]);
   }
 
-  function cnt_load(clk_id) {
-    var cate_num = cate_index(clk_id),
+  function cnt_load(load_cnt_id) {
+    var cate_num = cate_index(load_cnt_id),
         prev_id = Object.keys(user_cate)[cate_num[0]],
         active_id = Object.keys(user_cate)[cate_num[1]],
         next_id = Object.keys(user_cate)[cate_num[2]];
@@ -230,13 +230,15 @@ $(function() {
     $(this).toggleClass('on');
     $("#mypage").toggleClass('on');
   });
-  $("#nav_1 .swiper-slide").click(function() {
-    var clk_id = $(this).attr('id');
+
+  $("#nav_1 .swiper-slide a").click(function() {
+    var clk_id = $(this).closest().attr('id');
     console.log(clk_id);
 
     cnt_load(clk_id);
     depth_1.slideTo(chk_append_index(page_id,0)[1]);
   });
+
   cate_load();
   cnt_load(start_page_id());
 });
