--- a/cnt/news.html
+++ b/cnt/news.html
@@ -18,6 +18,25 @@
   <div>news</div>
 </article>
 <script type="text/javascript">
+  // Start [Global 변수 선언]
+    var sub_cate = {
+          mynews: "MY뉴스",
+          game: "정치",
+          car: "경제",
+          shopping: "사회",
+          home: "생활",
+          news: "IT/과학",
+          enter: "세계"
+        },
+        mynews = {
+          keyword1: "코로나19",
+          keyword2: "비트코인"
+        },
+        $nav2 = $('#nav_2 .swiper-wrapper');
+
+  // End [변수 선언]
+
+
   // 서브메뉴 슬라이더
       var depth_2 = new Swiper('.depth_2', {
         slidesPerView: 'auto',
@@ -27,4 +46,8 @@
         freeMode: true
       });
   // 서브메뉴 슬라이더 끝
+
+  $(function() {
+    cate_load('sub_cate','.detph_2 .wrapper',2, 'depth_2');
+  });
 </script>
