--- a/index.html
+++ b/index.html
@@ -152,15 +152,20 @@
     return cate_index(el_id1);
   }
 
-  function cate_load() {
+  function cate_load(obj_name, nav_wrapper, detph, slider_name) {
     for (var i = 0; i < cate_length; i++) {
-      var data = Object.keys(user_cate)[i],
-          data_name = user_cate[Object.keys(user_cate)[i]];
+      var $nav_wrapper = $(nav_wrapper),
+          data = Object.keys(obj_name)[i],
+          data_name = obj_name[data];
 
-      $nav_1.append("<li id="+data+" class='swiper-slide'><a href='#"+data+"'>"+data_name+"</a></li>");
+      $nav_wrapper.append("<li id="+data+" class='swiper-slide'><a href='#"+data+"'>"+data_name+"</a></li>");
     }
-    depth_1.update();
-    depth_1.slideTo(cate_index(start_page_id())[1]);
+    if(depth == 1) {
+      slider_name.update();
+      slider_name.slideTo(cate_index(start_page_id())[1]);
+    } else if (depth == 2) {
+      slider_name.update();
+    }
   }
 
   function cnt_load(load_cnt_id) {
@@ -182,7 +187,7 @@
       $("#mypage").toggleClass('on');
     });
 
-    cate_load();
+    cate_load('user_cate','.detph_1 .wrapper',1, 'depth_1');
     cnt_load(start_page_id());
 
     $("#nav_1 .swiper-slide").click(function() {
