--- a/cnt/news.html
+++ b/cnt/news.html
@@ -1,15 +1,7 @@
 <article page_id="news">
   <div id="nav_2">
     <nav class="depth_2 swiper-container border-box-all">
-      <ul class="swiper-wrapper">
-        <li class="swiper-slide"><a class="backdrop_st01" href="#game" data-id="game">게임</a></li>
-        <li class="swiper-slide"><a class="backdrop_st01" href="#game" data-id="game">게임</a></li>
-        <li class="swiper-slide"><a class="backdrop_st01" href="#game" data-id="game">게임</a></li>
-        <li class="swiper-slide"><a class="backdrop_st01" href="#game" data-id="game">게임</a></li>
-        <li class="swiper-slide"><a class="backdrop_st01" href="#game" data-id="game">게임</a></li>
-        <li class="swiper-slide"><a class="backdrop_st01" href="#game" data-id="game">게임</a></li>
-        <li class="swiper-slide"><a class="backdrop_st01" href="#game" data-id="game">게임</a></li>
-      </ul>
+      <ul class="swiper-wrapper"></ul>
     </nav>
     <a href="" class="news_tag_plus">
       <span class="font_zero">관심 태그 추가하기</span>
