--- a/index.html
+++ b/index.html
@@ -152,20 +152,15 @@
     return cate_index(el_id1);
   }
 
-  function cate_load(obj_name, nav_wrapper, detph, slider_name) {
+  function cate_load() {
     for (var i = 0; i < cate_length; i++) {
-      var $nav_wrapper = $(nav_wrapper),
-          data = Object.keys(obj_name)[i],
-          data_name = obj_name[data];
+      var data = Object.keys(user_cate)[i],
+          data_name = user_cate[data];
 
-      $nav_wrapper.append("<li id="+data+" class='swiper-slide'><a href='#"+data+"'>"+data_name+"</a></li>");
+      $nav_1.append("<li id="+data+" class='swiper-slide'><a href='#"+data+"'>"+data_name+"</a></li>");
     }
-    if(depth == 1) {
-      slider_name.update();
-      slider_name.slideTo(cate_index(start_page_id())[1]);
-    } else if (depth == 2) {
-      slider_name.update();
-    }
+    depth_1.update();
+    depth_1.slideTo(cate_index(start_page_id())[1]);
   }
 
   function cnt_load(load_cnt_id) {
@@ -187,7 +182,7 @@
       $("#mypage").toggleClass('on');
     });
 
-    cate_load('user_cate','.detph_1 .wrapper',1, 'depth_1');
+    cate_load();
     cnt_load(start_page_id());
 
     $("#nav_1 .swiper-slide").click(function() {
