--- a/index.html
+++ b/index.html
@@ -138,28 +138,15 @@
 // End [변수 선언]
 
   $(function() {
-    var page_hash = location.hash,
-        page_id = page_hash.replace('#','');
+    var page_id = chk_page_id();
 
-    if(page_hash == "" || page_hash == "#null" || page_hash == '#undefiend' || page_hash == '#') {
-      var page_id = 'home';
-
-      $body.attr('id', 'pid_'+page_id);
-    } else {
-      var page_id = page_hash.replace('#','');
-
-      $body.attr('id', 'pid_'+page_id)
-    }
-
-    $("#btn_menu").click(function() {
-      $(this).toggleClass('on');
-      $("#mypage").toggleClass('on');
-    });
+    $body.attr('id','pid_' + page_id);
 
     cate_load(user_cate, '.depth_1 .swiper-wrapper');
     depth_1.update();
     depth_1.slideTo(chk_obj_el_index(user_cate, page_id));
-    cnt_load(user_cate, page_id, '.cnt_slider > .swiper-wrapper', 'all');
+
+    cnt_load(user_cate, page_id);
 
     $("#nav_1 .swiper-slide").click(function() {
       var clk_id = $(this).attr('id'),
@@ -167,6 +154,11 @@
 
       cnt_load(user_cate, clk_id);
       depth_1.slideTo(clk_num);
+    });
+
+    $("#btn_menu").click(function() {
+      $(this).toggleClass('on');
+      $("#mypage").toggleClass('on');
     });
   });
 
