--- a/index.html
+++ b/index.html
@@ -150,7 +150,10 @@
 
     $("#nav_1 .swiper-slide").click(function() {
       var clk_id = $(this).attr('id'),
-          clk_num = chk_obj_el_index(user_cate, clk_id);
+          clk_num = chk_obj_el_index(user_cate, clk_id)[1];
+
+      console.log(clk_id);
+      console.log(clk_num);
 
       cnt_load(user_cate, clk_id);
       depth_1.slideTo(clk_num);
