--- a/index.html
+++ b/index.html
@@ -34,45 +34,13 @@
     </div>
     <div id="search_wrap" class="backdrop_st01">
       <div id="btn_search" class="flex">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-          <defs>
-            <style>
-              .a {
-                fill: #fff;
-                opacity: 0;
-              }
-
-              .b {
-                fill: #db0017;
-              }
-            </style>
-          </defs>
-          <rect class="a" width="24" height="24" />
-          <path class="b" d="M27.765,26.54,22.2,20.927A7.927,7.927,0,1,0,21,22.145l5.526,5.577a.856.856,0,0,0,1.208.031A.861.861,0,0,0,27.765,26.54ZM15.974,22.213A6.259,6.259,0,1,1,20.4,20.38,6.222,6.222,0,0,1,15.974,22.213Z"
-            transform="translate(-6 -5.987)" />
-        </svg>
+        <img src="./res/img/icon_search" alt="검색버튼">
       </div>
       <form name="search" role="search" action="">
         <input type="search" name="" title="검색어를 입력해주세요." placeholder="검색어를 입력해주세요." class="" autocomplete="off" maxlength="255" autocorrent="off" autocapitalize="off">
         <button class="clear" type="button" name="input_clear">입력된 검색어 삭제</button>
         <button class="searh" type="button" name="button">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-            <defs>
-              <style>
-                .a {
-                  fill: #fff;
-                  opacity: 0;
-                }
-
-                .b {
-                  fill: #db0017;
-                }
-              </style>
-            </defs>
-            <rect class="a" width="24" height="24" />
-            <path class="b" d="M27.765,26.54,22.2,20.927A7.927,7.927,0,1,0,21,22.145l5.526,5.577a.856.856,0,0,0,1.208.031A.861.861,0,0,0,27.765,26.54ZM15.974,22.213A6.259,6.259,0,1,1,20.4,20.38,6.222,6.222,0,0,1,15.974,22.213Z"
-              transform="translate(-6 -5.987)" />
-          </svg>
+          <img src="./res/img/icon_search" alt="검색버튼">
         </button>
       </form>
       <div class="close"></div>
