--- a/cnt/home.html
+++ b/cnt/home.html
@@ -3,7 +3,7 @@
 <!-- 로고 -->
   <div class="logo">
     <h1 class="tit hide">T인트로</h1>
-    <img src="res/img/icon_logo" alt="T인트로">
+    <img src="./res/img/icon_logo" alt="T인트로">
   </div>
 <!-- end 로고 -->
 
@@ -13,7 +13,7 @@
     <form name="sch_form" action="" method="get">
       <input class="full" type="search" name="" placeholder="검색어를 입력하세요">
       <button class="sch_btn" type="submit" name="sch_btn">
-        <img src="res/img/icon_search" alt="검색버튼">
+        <img src="./res/img/icon_search" alt="검색버튼">
       </button>
     </form>
   </div>
@@ -25,49 +25,49 @@
     <ul class="clear">
       <li class="box">
         <a class="link" href="#">
-          <img class="img" src="res/img/icon_dummy.png" alt="서비스명">
+          <img class="img" src="./res/img/icon_dummy.png" alt="서비스명">
           <p class="txt">서비스명</p>
         </a>
       </li>
       <li class="box">
         <a class="link" href="#">
-          <img class="img" src="res/img/icon_dummy.png" alt="서비스명">
+          <img class="img" src="./res/img/icon_dummy.png" alt="서비스명">
           <p class="txt">서비스명</p>
         </a>
       </li>
       <li class="box">
         <a class="link" href="#">
-          <img class="img" src="res/img/icon_dummy.png" alt="서비스명">
+          <img class="img" src="./res/img/icon_dummy.png" alt="서비스명">
           <p class="txt">서비스명</p>
         </a>
       </li>
       <li class="box">
         <a class="link" href="#">
-          <img class="img" src="res/img/icon_dummy.png" alt="서비스명">
+          <img class="img" src="./res/img/icon_dummy.png" alt="서비스명">
           <p class="txt">서비스명</p>
         </a>
       </li>
       <li class="box">
         <a class="link" href="#">
-          <img class="img" src="res/img/icon_dummy.png" alt="서비스명">
+          <img class="img" src="./res/img/icon_dummy.png" alt="서비스명">
           <p class="txt">서비스명</p>
         </a>
       </li>
       <li class="box">
         <a class="link" href="#">
-          <img class="img" src="res/img/icon_dummy.png" alt="서비스명">
+          <img class="img" src="./res/img/icon_dummy.png" alt="서비스명">
           <p class="txt">서비스명</p>
         </a>
       </li>
       <li class="box">
         <a class="link" href="#">
-          <img class="img" src="res/img/icon_dummy.png" alt="서비스명">
+          <img class="img" src="./res/img/icon_dummy.png" alt="서비스명">
           <p class="txt">서비스명</p>
         </a>
       </li>
       <li class="box">
         <a class="link" href="#">
-          <img class="img" src="res/img/icon_dummy.png" alt="서비스명">
+          <img class="img" src="./res/img/icon_dummy.png" alt="서비스명">
           <p class="txt">서비스명</p>
         </a>
       </li>
@@ -79,7 +79,7 @@
   <div class="ad_bnr">
     <h2 class="tit hide">광고타이틀출력</h2>
     <a href="#">
-      <img src="res/img/ad_tea_dummy.png" alt="광고타이틀">
+      <img src="./res/img/ad_tea_dummy.png" alt="광고타이틀">
     </a>
   </div>
 <!-- end 광고출력 -->
@@ -94,7 +94,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -105,7 +105,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -116,7 +116,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -127,7 +127,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -138,7 +138,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -149,7 +149,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -160,7 +160,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -171,7 +171,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -193,7 +193,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -204,7 +204,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -215,7 +215,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -226,7 +226,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -237,7 +237,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -248,7 +248,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -259,7 +259,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -270,7 +270,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
