--- a/cnt/home.html
+++ b/cnt/home.html
@@ -3,7 +3,7 @@
 <!-- 로고 -->
   <div class="logo">
     <h1 class="tit hide">T인트로</h1>
-    <img src="./res/img/icon_logo" alt="T인트로">
+    <img src="./res/img/icon_logo.png" alt="T인트로">
   </div>
 <!-- end 로고 -->
 
@@ -13,7 +13,7 @@
     <form name="sch_form" action="" method="get">
       <input class="full" type="search" name="" placeholder="검색어를 입력하세요">
       <button class="sch_btn" type="submit" name="sch_btn">
-        <img src="./res/img/icon_search" alt="검색버튼">
+        <img src="./res/img/icon_search.png" alt="검색버튼">
       </button>
     </form>
   </div>
