--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     </div>
     <div id="search_wrap" class="backdrop_st01">
       <div id="btn_search" class="flex">
-        <img src="./res/img/icon_search" alt="검색버튼">
+        <img src="./res/img/icon_search.png" alt="검색버튼">
       </div>
       <form name="search" role="search" action="">
         <input type="search" name="" title="검색어를 입력해주세요." placeholder="검색어를 입력해주세요." class="" autocomplete="off" maxlength="255" autocorrent="off" autocapitalize="off">
         <button class="clear" type="button" name="input_clear">입력된 검색어 삭제</button>
         <button class="searh" type="button" name="button">
-          <img src="./res/img/icon_search" alt="검색버튼">
+          <img src="./res/img/icon_search.png" alt="검색버튼">
         </button>
       </form>
       <div class="close"></div>
@@ -57,7 +57,7 @@
   <footer>
     <div class="ad_wrap margin">
       <div ad-style="" ad-data-id="footer" ad-data-cate="">
-        <img src="./res/img/dummy_ad_bnr_16×9.png" alt="광고타이틀출력">
+        <img src="./res/img/dummy_ad_bnr.png" alt="광고타이틀출력">
       </div>
     </div>
     <div class="info margin">
