--- a/cnt/home.html
+++ b/cnt/home.html
@@ -3,7 +3,7 @@
 <!-- 로고 -->
   <div class="logo">
     <h1 class="tit hide">T인트로</h1>
-    <img src="./res/img/icon_logo.png" alt="T인트로">
+    <img src="./res/img/icon_logo.png" with="48px" heigh="52px" alt="T인트로">
   </div>
 <!-- end 로고 -->
 
@@ -13,7 +13,7 @@
     <form name="sch_form" action="" method="get">
       <input class="full" type="search" name="" placeholder="검색어를 입력하세요">
       <button class="sch_btn" type="submit" name="sch_btn">
-        <img src="./res/img/icon_search.png" alt="검색버튼">
+        <img src="./res/img/icon_search.png" with="24px" heigh="24px" alt="검색버튼">
       </button>
     </form>
   </div>
@@ -25,49 +25,49 @@
     <ul class="clear">
       <li class="box">
         <a class="link" href="#">
-          <img class="img" src="./res/img/icon_dummy.png" alt="서비스명">
+          <img class="img" with="44px" heigh="44px" src="./res/img/icon_dummy.png" alt="서비스명">
           <p class="txt">서비스명</p>
         </a>
       </li>
       <li class="box">
         <a class="link" href="#">
-          <img class="img" src="./res/img/icon_dummy.png" alt="서비스명">
+          <img class="img" with="44px" heigh="44px" src="./res/img/icon_dummy.png" alt="서비스명">
           <p class="txt">서비스명</p>
         </a>
       </li>
       <li class="box">
         <a class="link" href="#">
-          <img class="img" src="./res/img/icon_dummy.png" alt="서비스명">
+          <img class="img" with="44px" heigh="44px" src="./res/img/icon_dummy.png" alt="서비스명">
           <p class="txt">서비스명</p>
         </a>
       </li>
       <li class="box">
         <a class="link" href="#">
-          <img class="img" src="./res/img/icon_dummy.png" alt="서비스명">
+          <img class="img" with="44px" heigh="44px" src="./res/img/icon_dummy.png" alt="서비스명">
           <p class="txt">서비스명</p>
         </a>
       </li>
       <li class="box">
         <a class="link" href="#">
-          <img class="img" src="./res/img/icon_dummy.png" alt="서비스명">
+          <img class="img" with="44px" heigh="44px" src="./res/img/icon_dummy.png" alt="서비스명">
           <p class="txt">서비스명</p>
         </a>
       </li>
       <li class="box">
         <a class="link" href="#">
-          <img class="img" src="./res/img/icon_dummy.png" alt="서비스명">
+          <img class="img" with="44px" heigh="44px" src="./res/img/icon_dummy.png" alt="서비스명">
           <p class="txt">서비스명</p>
         </a>
       </li>
       <li class="box">
         <a class="link" href="#">
-          <img class="img" src="./res/img/icon_dummy.png" alt="서비스명">
+          <img class="img" with="44px" heigh="44px" src="./res/img/icon_dummy.png" alt="서비스명">
           <p class="txt">서비스명</p>
         </a>
       </li>
       <li class="box">
         <a class="link" href="#">
-          <img class="img" src="./res/img/icon_dummy.png" alt="서비스명">
+          <img class="img" with="44px" heigh="44px" src="./res/img/icon_dummy.png" alt="서비스명">
           <p class="txt">서비스명</p>
         </a>
       </li>
@@ -193,7 +193,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" with="56px" heigh="56px" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -204,7 +204,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" with="56px" heigh="56px" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -215,7 +215,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" with="56px" heigh="56px" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -226,7 +226,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" with="56px" heigh="56px" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -237,7 +237,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" with="56px" heigh="56px" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -248,7 +248,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" with="56px" heigh="56px" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -259,7 +259,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" with="56px" heigh="56px" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
@@ -270,7 +270,7 @@
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="./res/img/icon_dummy.png" alt="타이틀출력">
+            <img src="./res/img/icon_dummy.png" with="56px" heigh="56px" alt="타이틀출력">
           </div>
           <div class="name">
             <span class="cate_name">카테고리</span>
