--- a/cnt/home.html
+++ b/cnt/home.html
@@ -1,7 +1,7 @@
 <article page_id="home" class="wrap">
 
 <!-- 로고 -->
-  <div class="logo">
+  <div class="logo center">
     <h1 class="tit hide">T인트로</h1>
     <img src="./res/img/icon_logo.png" with="48px" heigh="52px" alt="T인트로">
   </div>
@@ -11,8 +11,8 @@
   <div class="sch">
     <h2 class="tit hide">검색어 입력창</h2>
     <form name="sch_form" action="" method="get">
-      <input class="full" type="search" name="" placeholder="검색어를 입력하세요">
-      <button class="sch_btn" type="submit" name="sch_btn">
+      <input class="full block" type="search" name="" placeholder="검색어를 입력하세요">
+      <button class="sch_btn flex" type="submit" name="sch_btn">
         <img src="./res/img/icon_search.png" with="24px" heigh="24px" alt="검색버튼">
       </button>
     </form>
