--- a/index.html
+++ b/index.html
@@ -17,56 +17,57 @@
 </head>
 
 <body id="">
-  <header>
-    <div id="btn_menu" class="box44 flex">
-      <div class="icon_menu">
-        <div class="icon_menu_inner"></div>
+  <div class="wrap">
+    <header>
+      <div id="btn_menu" class="box44 flex">
+        <div class="icon_menu">
+          <div class="icon_menu_inner"></div>
+        </div>
       </div>
-    </div>
-    <div id="mypage" class="backdrop_st01">
-      <div class="login"></div>
-      <div class="logout"></div>
-    </div>
-    <div id="nav_1" class="mid_bar border_box_all backdrop_st01">
-      <nav class="depth_1 swiper-container">
-        <ul class="swiper-wrapper"></ul>
-      </nav>
-    </div>
-    <div id="search_wrap" class="backdrop_st01">
-      <div id="btn_search" class="flex">
-        <img src="./res/img/icon_search.png" alt="검색버튼">
+      <div id="mypage" class="backdrop_st01">
+        <div class="login"></div>
+        <div class="logout"></div>
       </div>
-      <form name="search" role="search" action="">
-        <input type="search" name="" title="검색어를 입력해주세요." placeholder="검색어를 입력해주세요." class="" autocomplete="off" maxlength="255" autocorrent="off" autocapitalize="off">
-        <button class="clear" type="button" name="input_clear">입력된 검색어 삭제</button>
-        <button class="searh" type="button" name="button">
+      <div id="nav_1" class="mid_bar border_box_all backdrop_st01">
+        <nav class="depth_1 swiper-container">
+          <ul class="swiper-wrapper"></ul>
+        </nav>
+      </div>
+      <div id="search_wrap" class="backdrop_st01">
+        <div id="btn_search" class="flex">
           <img src="./res/img/icon_search.png" alt="검색버튼">
-        </button>
-      </form>
-      <div class="close"></div>
-    </div>
-  </header>
-
-  <div id="cnt" class="cnt_slider swiper-container">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide"></div>
-      <div class="swiper-slide"></div>
-      <div class="swiper-slide"></div>
-    </div>
-  </div>
-  <footer>
-    <div class="ad_wrap margin">
-      <div ad-style="" ad-data-id="footer" ad-data-cate="">
-        <img src="./res/img/dummy_ad_bnr.png" alt="광고타이틀출력">
+        </div>
+        <form name="search" role="search" action="">
+          <input type="search" name="" title="검색어를 입력해주세요." placeholder="검색어를 입력해주세요." class="" autocomplete="off" maxlength="255" autocorrent="off" autocapitalize="off">
+          <button class="clear" type="button" name="input_clear">입력된 검색어 삭제</button>
+          <button class="searh" type="button" name="button">
+            <img src="./res/img/icon_search.png" alt="검색버튼">
+          </button>
+        </form>
+        <div class="close"></div>
+      </div>
+    </header>
+    <div id="cnt" class="cnt_slider swiper-container">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide"></div>
+        <div class="swiper-slide"></div>
+        <div class="swiper-slide"></div>
       </div>
     </div>
-    <div class="info margin">
-      <a href="">이용약관</a>
-      <a href="">개인정보처리방침</a>
-      <a href="">고객센터</a>
-    </div>
-    <div class="copyright margin">ⓒ SK텔레콤 Crop.</div>
-  </footer>
+    <footer>
+      <div class="ad_wrap margin">
+        <div ad-style="" ad-data-id="footer" ad-data-cate="">
+          <img src="./res/img/dummy_ad_bnr.png" alt="광고타이틀출력">
+        </div>
+      </div>
+      <div class="info margin">
+        <a href="">이용약관</a>
+        <a href="">개인정보처리방침</a>
+        <a href="">고객센터</a>
+      </div>
+      <div class="copyright margin">ⓒ SK텔레콤 Crop.</div>
+    </footer>
+  </div>
   <!-- <script src="./res/js/jquery-3.5.0.slim.min.js" charset="utf-8"></script> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./res/js/swiper.min.js" charset="utf-8"></script>
