--- a/cnt/home.html
+++ b/cnt/home.html
@@ -20,7 +20,7 @@
 <!-- end 검색어 입력창 -->
 
 <!-- 즐겨찾기 -->
-  <div class="bmk">
+  <div class="bmk lay_wrap">
     <h2 class="tit hide">즐겨찾기 리스트</h2>
     <ul class="flex">
       <li class="box">
@@ -76,7 +76,7 @@
 <!-- end 즐겨찾기 -->
 
 <!-- 광고출력 -->
-  <div class="ad_bnr">
+  <div class="ad_bnr lay_wrap full">
     <h2 class="tit hide">광고타이틀출력</h2>
     <a href="#">
       <img src="./res/img/ad_tea_dummy.png" alt="광고타이틀">
@@ -85,10 +85,10 @@
 <!-- end 광고출력 -->
 
 <!-- 뉴스 슬라이드 -->
-  <div class="main_news slider_type1 swiper-container">
-    <div class="tit_wrap">
+  <div class="main_news slider_type1 lay_wrap swiper-container">
+    <div class="tit_wrap margin">
       <h2 class="tit">뉴스 포커스</h2>
-      <a href="#">더보기</a>
+      <a class="more" href="#"><span class="hide">더보기</span></a>
     </div>
     <ul class="cnt_type1 swiper-wrapper">
       <li class="swiper-slide">
@@ -184,10 +184,10 @@
 <!-- end 뉴스 슬라이드 -->
 
 <!-- 게임 슬라이드 -->
-  <div class="main_game slider_type1 swiper-container">
-    <div class="tit_wrap">
+  <div class="main_game slider_type1 lay_wrap swiper-container">
+    <div class="tit_wrap margin">
       <h2 class="tit">게임</h2>
-      <a href="#">더보기</a>
+      <a class="more" href="#"><span class="hide">더보기</span></a>
     </div>
     <ul class="cnt_type1 swiper-wrapper">
       <li class="swiper-slide">
@@ -282,10 +282,12 @@
   </div>
 <!-- end 게임 슬라이드 -->
   <script type="text/javascript">
-    var slider_type1 = new Swiper('.slider_type1', {
-      slidesPerView: 'auto',
-      spaceBetween: 8,
-      freeMode: true,
+    $(function() {
+      var slider_type1 = new Swiper('.slider_type1', {
+        slidesPerView: 'auto',
+        spaceBetween: 8,
+        freeMode: true,
+      });
     });
   </script>
 </article>
