--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="btn_search" class="flex">
           <img src="./res/img/icon_search.png" alt="검색버튼">
         </div>
-        <form name="search" role="search" action="">
+        <form class="sch_form" name="search" role="search" action="">
           <input type="search" name="" title="검색어를 입력해주세요." placeholder="검색어를 입력해주세요." class="" autocomplete="off" maxlength="255" autocorrent="off" autocapitalize="off">
           <button class="clear" type="button" name="input_clear">입력된 검색어 삭제</button>
           <button class="searh" type="button" name="button">
