--- a/cnt/home.html
+++ b/cnt/home.html
@@ -10,7 +10,7 @@
 <!-- 검색어 입력창 -->
   <div class="sch lay_wrap">
     <h2 class="tit hide">검색어 입력창</h2>
-    <form name="sch_form" action="" method="get">
+    <form class="sch_form" name="sch_form" action="" method="get">
       <input class="full block" type="search" name="" placeholder="검색어를 입력하세요">
       <button class="sch_btn flex" type="submit" name="sch_btn">
         <img src="./res/img/icon_search.png" with="24px" heigh="24px" alt="검색버튼">
